--- a/1.html
+++ b/1.html
@@ -1,6 +1,6 @@
 <html>
 <title>
-Our Web Apps Project
+Web_apps project
 </title>
 <head>
 <link rel="stylesheet" type="text/css" href="mystyle.css">
