Added States Html Files
These are unedited and just the template files

--- a/1.html
+++ b/1.html
@@ -125,11 +125,18 @@ Our Web Apps Project
 					
 				</nav>
 			</div>
+<div id="gallary">
+  <a href="#"><img src="http://lorempixel.com/300/250/animals/1/" alt /></a>
+  <a href="#"><img src="http://lorempixel.com/300/250/animals/2/" alt /></a>
+  <a href="#"><img src="http://lorempixel.com/300/250/animals/3/" alt /></a>
+</div>
+		
 
 </body>
 <footer>
 <center>
-FOOTER
+Follow Us On:
+ 
 </center>
 </footer>
 </html>
